--- a/trusty/go-app/hooks/install
+++ b/trusty/go-app/hooks/install
@@ -21,6 +21,7 @@ install_go() {
 install_app() {
   juju-log "Installing ${app_name}..."
   mkdir -p /home/${app_user}/go
+  export GOPATH=/home/${app_user}/go
   export GOROOT=/home/${app_user}/go
   export PATH=$PATH:$GOROOT/bin
   go get ${app_repo}
@@ -37,7 +38,7 @@ respawn
  
 script
   export PORT=${app_port}
-  exec /usr/bin/node ${app_dir}/server.js &
+  exec gohttphello &
 end script
 EOS
 }
